ark/docs/src/styles.css
@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap");
@import url("https://fonts.cdnfonts.com/css/cascadia-code");

/* Don't render italics, which can be hard to read for some users */
@font-face {
	font-family: "Cascadia Code";
	src: local("Cascadia Code");
	font-style: italic;
}

:root {
	/* General */
	--shadow: rgba(0, 0, 0, 0.2) 0px 11px 15px -7px,
		rgba(0, 0, 0, 0.14) 0px 24px 38px 3px, rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
	--hover-glow: 0.5rem 0.5rem 2rem 0 rgba(31, 38, 135, 0.37);
	/* Fonts */
	--sl-font: Raleway, sans-serif;
	--sl-font-mono: Cascadia Code;
	/* Dark mode colors. */
	--sl-color-accent-low: #4b3621;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #f5cf8f;
	--sl-color-white: #fffff0;
	--sl-color-gray-1: #e0f0ff;
	--sl-color-gray-2: #a4c6e5;
	--sl-color-gray-3: #4b91cc;
	--sl-color-gray-4: #0a5c93;
	--sl-color-gray-5: #003b62;
	--sl-color-gray-6: #002946;
	--sl-color-black: #001a2f;
	/* Based on ArkDark ErrorLens */
	--ark-error: #9558f8a0;
	--ark-success: #40decca0;
	/** @shikijs/twoslash/style-rich.css overrides */
	--twoslash-border-color: #ba7e4127;
	--twoslash-underline-color: currentColor;
	--twoslash-highlighted-border: #c37d0d50;
	--twoslash-highlighted-bg: #c37d0d20;
	--twoslash-popup-bg: transparent;
	--twoslash-popup-color: inherit;
	--twoslash-popup-shadow: var(--shadow);
	--twoslash-docs-color: #888;
	--twoslash-docs-font: sans-serif;
	--twoslash-code-font: inherit;
	--twoslash-code-font-size: 1em;
	--twoslash-matched-color: inherit;
	--twoslash-unmatched-color: #888;
	--twoslash-cursor-color: var(--sl-color-gray-2);
	--twoslash-error-color: var(--ark-error);
	--twoslash-error-bg: #9558f818;
	--twoslash-warn-color: #c37d0d;
	--twoslash-warn-bg: #c37d0d20;
	--twoslash-tag-color: #3772cf;
	--twoslash-tag-bg: #3772cf20;
	--twoslash-tag-warn-color: var(--twoslash-warn-color);
	--twoslash-tag-warn-bg: var(--twoslash-warn-bg);
	--twoslash-tag-annotate-color: #1ba673;
	--twoslash-tag-annotate-bg: #1ba67320;
}

/* Light mode colors. */
:root[data-theme="light"] {
	--sl-color-accent-low: #f5cf8f;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #4b3621;
	--sl-color-white: #001a2f;
	--sl-color-gray-1: #002946;
	--sl-color-gray-2: #003b62;
	--sl-color-gray-3: #0a5c93;
	--sl-color-gray-4: #4b91cc;
	--sl-color-gray-5: #a4c6e5;
	--sl-color-gray-6: #e0f0ff;
	--sl-color-gray-7: #eff7ff;
	--sl-color-black: #fffff0;
}

pre.astro-code,
pre.shiki,
.twoslash-popup-container,
.copy-button {
	border-radius: 1rem;
	border-color: #ba7e4127;
	border-width: 1px;
}

header {
	backdrop-filter: blur(8px);
	box-shadow: var(--shadow);
}

.header {
	background-color: transparent;
}

/** Hide theme picker since light mode is not currently supported */
starlight-theme-select,
.social-icons::after {
	display: none;
}

.twoslash .twoslash-hover:hover .twoslash-popup-container,
.twoslash .twoslash-completion-cursor .twoslash-completion-list {
	border-radius: 1rem;
	opacity: 1;
	background: #001323aa;
	backdrop-filter: blur(8px);
	box-shadow: var(--hover-glow);
}

/* Firefox specific rules */
@-moz-document url-prefix() {
	/* The backdrop-filter above doesn't work by default yet on Firefox so we do this instead  */
	.twoslash .twoslash-hover:hover .twoslash-popup-container {
		background: #001323ee;
	}
}

h1 {
	font-weight: 400;
}

header * {
	/* Ensure navbar items are in front of boat animation but slightly transparent */
	z-index: 12;
}

@media (max-width: 799px) {
	.hero {
		padding-top: 8rem;
	}

	.hero img {
		display: none;
	}
}

@media (min-width: 800px) {
	.hero {
		margin-top: -3rem;
		margin-bottom: -8rem;
	}
}

.code-container {
	position: relative;
}

.copy-button {
	position: absolute;
	top: -0.25rem;
	right: 0.75rem;
	padding: 0.1rem;
	border-radius: 4px;
	background: var(--sl-color-gray-4);
	opacity: 0.3;
	cursor: pointer;
}

.copy-button:hover {
	opacity: 0.6;
}

.copy-button:active {
	opacity: 0.6;
}

/* only scale the icon to avoid changing the click hitbox */
.copy-icon:active {
	transition: scale 0.3s ease;
	scale: 0.8;
}

